# DA_1-G119

./: CMakeLists.txt  Carrinha.cpp  Carrinha.h  Empresa.cpp  Empresa.h  Encomenda.cpp  Encomenda.h  README.md  carga.txt  cenario.txt  main.cpp
